# trading-bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
bot/: cli.py  config.py
bot/backtest/: engine.py  report.py
bot/data/: base.py  ccxt_loader.py  yahoo.py
bot/db/: models.py  store.py
bot/execution/: base.py  paper.py
bot/monitoring/: alerts.py  health.py  logger.py  metrics.py
bot/risk/: limits.py  manager.py
bot/signals/: base.py  momentum.py
docs/: RUNBOOK.md
docs/adr/: ADR-001-python-as-primary-language.md  ADR-002-pluggable-abc-architecture.md  ADR-003-structlog-for-logging.md  ADR-004-phase-based-build.md  ADR-005-fixed-fractional-position-sizing.md  ADR-006-sqlalchemy-sqlite-to-postgres.md  ADR-007-alpaca-binance-as-primary-brokers.md  ADR-008-momentum-rsi-sma-as-baseline.md  ADR-009-paper-to-live-gap-mitigations.md  README.md
docs/plan/: v1-2026-03-25.md  v2-2026-03-25.md
tests/: conftest.py  test_backtest.py  test_data.py  test_db.py  test_execution.py  test_monitoring.py  test_risk.py  test_signals.py
